--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,10 @@ utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }
 # CLI arguments
 clap = { version = "4", features = ["derive", "env"] }
 
-# Authentication
+# Authentication & Security
 base64 = "0.22"
+subtle = "2.5"
+zeroize = { version = "1.8", features = ["derive"] }
 
 # Utilities
 mime_guess = "2.0"
