--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ zeroize = { version = "1.8", features = ["derive"] }
 # Utilities
 mime_guess = "2.0"
 percent-encoding = "2.3"
+infer = "0.16"
 
 # Logging
 tracing = "0.1"
