--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ tokio = { version = "1", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "trace", "compression-full"] }
 
-# TLS
-rustls = "0.23"
+# TLS with Post-Quantum Cryptography
+rustls = { version = "0.23", features = ["aws_lc_rs"] }
 rustls-pemfile = "2.0"
 rcgen = "0.13"
 
